blockml/test/valid/12_join_sql_on_refs_dim/v29/v29_two.view
view: v29_two
table: 1
fields:

- dimension: dim6
  sql: 600

- dimension: dim10
  sql: 10

- dimension: dim20
  sql: ${dim10} + 20
